line edit home.html and creation of textOrg

--- a/js_tester1/home.html
+++ b/js_tester1/home.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>What has my life come to...</title>
-		<link rel="stylesheet" href="textOrganization.css">
+		<link rel="stylesheet" href="textOrg.css">
 	</head>
 
 	<body>
